<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="15dp">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_above="@+id/btnCodigo"
        android:layout_alignParentStart="true"
        android:layout_marginBottom="15dp">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <ImageView
                android:id="@+id/imgInfo"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="15dp"
                android:src="@drawable/ic_info"
                android:contentDescription="@string/acerca" />

            <TextView
                android:id="@+id/lblSobre"
                style="@style/Texto.AcercaCabecera"
                android:layout_below="@+id/imgInfo"
                android:text="@string/acerca" />

            <TextView
                android:id="@+id/lblDesarrollador"
                style="@style/Texto.Acerca"
                android:layout_below="@+id/lblSobre"
                android:text="@string/desarrollador" />

            <TextView
                android:id="@+id/lblFecha"
                style="@style/Texto.Acerca"
                android:layout_below="@+id/lblDesarrollador"
                android:text="@string/fechaP" />

            <TextView
                android:id="@+id/lblFechaVersion"
                style="@style/Texto.Acerca"
                android:layout_below="@+id/lblFecha"
                android:text="@string/fechaMod" />

            <TextView
                android:id="@+id/lblHistoria"
                style="@style/Texto.AcercaCabecera"
                android:layout_below="@+id/lblFechaVersion"
                android:text="@string/historiaTitulo" />

            <TextView
                style="@style/Texto.Acerca"
                android:layout_below="@+id/lblHistoria"
                android:text="@string/historia" />

        </RelativeLayout>

    </ScrollView>


    <Button
        android:id="@+id/btnCodigo"
        style="@style/EstiloBotonesMenu"
        android:layout_alignParentBottom="true"
        android:drawableStart="@drawable/ic_git"
        android:text="@string/verCodigoFuente" />

</RelativeLayout>