<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="20dp"
    android:scrollbars="vertical"
    tools:context=".controladores.VistaMenuPrincipal">

    <ImageView
        android:id="@+id/imgPortada"
        android:layout_width="match_parent"
        android:layout_height="100dp"
        android:layout_marginBottom="10dp"
        android:src="@drawable/ic_tituloaplicacion" />

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_above="@+id/lblTextoRecord"
        android:layout_below="@+id/imgPortada">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:gravity="center"
            android:orientation="vertical">

            <Button
                android:id="@+id/btnMnuIndividual"
                style="@style/EstiloBotonesMenu"
                android:drawableStart="@drawable/ic_jugar"
                android:text="@string/jugar" />

            <Button
                android:id="@+id/btnMnuRegistros"
                style="@style/EstiloBotonesMenu"
                android:drawableStart="@drawable/ic_registros"
                android:text="@string/verR" />

            <Button
                android:id="@+id/btnMnuAcerca"
                style="@style/EstiloBotonesMenu"
                android:drawableStart="@drawable/ic_acerca"
                android:text="@string/acerca" />

            <Button
                android:id="@+id/btnMnuSalir"
                style="@style/EstiloBotonesMenu"
                android:drawableStart="@drawable/ic_salir"
                android:text="@string/salir" />
        </LinearLayout>
    </ScrollView>

    <TextView
        android:id="@+id/lblTextoRecord"
        style="@style/EstiloTextoMenu"
        android:layout_above="@+id/lblMnuRecordIndividual"
        android:layout_marginBottom="5dp"
        android:text="@string/tuRecord" />

    <TextView
        android:id="@+id/lblMnuRecordIndividual"
        style="@style/EstiloTextoMenu.Record"
        android:layout_alignParentBottom="true"
        android:text="@string/nada" />


</RelativeLayout>